Added code that I forgot to add in initialy.

--- a/Manual/Reverse Polish Notation.html
+++ b/Manual/Reverse Polish Notation.html
@@ -31,7 +31,7 @@
                 <p>To solve the module, calculate the answer of the displayed equation. This equation is written in different notation. This notation is called <strong> Reverse Polish Notation </strong> (postfix notation). When you have your answer, take the absolute value of it, modulo it by 1'000'000, input it using the keypad and then hit the OK button. You can clear your input using the clear button. Complete all 3 stages to solve the module. When an incorrect answer is entered, you’ll get a strike, but the module won't reset. If any number isn’t a whole number, round it to 3 places after the decimal point. NOTE: If you have to divide by 0 then let the answer be 0.</p>
 
                 <h3>Encoded numbers: </h3>
-                <p>Every number in the equation can be replaced with a letter. Using the rules below for the correct letters obtain the number and replace the correct letter in the equation with it. After the calculation if any number becomes 0 add 1 to it.  </p>
+                <p>Every number in the equation can be replaced with a letter. Using the rules below for the correct letters obtain the number and replace the correct letter in the equation with it. After the calculation, if the result is 0, add 1 to it.  </p>
                 <p>If the letter is: <br /></p>
                 <p><strong>A</strong> - the product of the number of batteries and the number of modules on the bomb excluding needies. </p>
                 <p><strong>B</strong> - the square of the difference between the number of ports and the number of indicators.</p>
